# RobotSim

./: .gitignore  README.md  cleanup.sh  codex_work.md  conversation_with_claude.md  dependencies.repos  ik_sweep.py  run_commands.sh  run_jetson_smoke_test.sh  setup_env.sh  项目需求文档.md
alicia_gz_sim/config/: alicia_d_ros2_controllers.yaml
alicia_gz_sim/models/alicia_d_fixed/: model.config  model.sdf
alicia_gz_sim/worlds/: bin_scene.sdf
src/alicia_d_descriptions/: CMakeLists.txt  package.xml
src/alicia_d_descriptions/launch/: display.launch.py
src/alicia_d_descriptions/meshes/Alicia_D_v5_6/gripper_100mm/: Link3.STL  Link4.STL  Link5.STL  Link6.STL  README.md  left_gripper.STL  right_gripper.STL
src/alicia_d_descriptions/urdf/Alicia_D_v5_6/: Alicia_D_v5_6_gripper_100mm.urdf
src/alicia_moveit_config/: CMakeLists.txt  package.xml
src/alicia_moveit_config/config/: Alicia_D_v5_6_gripper_100mm.srdf  Alicia_D_v5_6_gripper_100mm.urdf.xacro  alicia_d.ros2_control.xacro  demo.rviz  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ros_gz_bridge.yaml  sensors_3d.yaml
src/alicia_moveit_config/launch/: moveit_config_builder.py  sim_demo.launch.py
src/perception_mvp/: package.xml  setup.cfg  setup.py
src/perception_mvp/launch/: task_demo.launch.py
src/perception_mvp/perception_mvp/: color_perception_node.py  move_to_pregrasp_node.py  task_state_machine_node.py  virtual_grasp_node.py
