<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alicia_moveit_config</name>
  <version>1.0.0</version>
  <description>
    Unified MoveIt2 configuration for Alicia-D 6-DOF arm with original gripper in Gazebo simulation.
  </description>
  <maintainer email="kaisang@example.com">kaisang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt2 -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <!-- ros2_control -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Gazebo integration -->
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Robot description -->
  <exec_depend>alicia_d_descriptions</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
