<?xml version="1.0"?>
<package format="3">
  <name>perception_mvp</name>
  <version>0.0.1</version>
  <description>
    Minimal RGB-D perception, task state machine, and motion execution
    for Alicia-D 6-DOF robot intelligent grasping simulation (PDE closed loop).
  </description>

  <maintainer email="kaisang@example.com">kaisang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
